# file_converter

./: .gitignore  CLAUDE.md  SPECIFICATION.md  dev.sh  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.bundle.windows.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  converter.rs  identifier.rs  lib.rs  main.rs  scanner.rs
src/assets/: main.css
src/components/: DropZone.vue  ProgressBar.vue  ResultReport.vue  ResultTable.vue  SettingsModal.vue  StatusBadge.vue
src/stores/: conversion.ts
